# HttpConnection

./: .gitignore  CMakeLists.txt  HttpConnection  Makefile
.github/workflows/: cmake-multi-platform.yml  release.yml
include/: HttpConnection.h  HttpRequest.hpp  HttpResponse.hpp  LogLevel.hpp  Logger.h  strutils.h
src/: HttpConnection.cpp  Logger.cpp  main.cpp
